Archive2/f8/eaf9a4598c7eae/output
main.cpp: In member function ‘virtual void TruckProducer::run()’:
main.cpp:51:87: error: ‘class std::thread::id’ has no member named ‘hash’
         std::mt19937::result_type seed = (size_t)time(0) + std::this_thread::get_id().hash() ;
                                                                                       ^
main.cpp: At global scope:
main.cpp:62:2: warning: extra ‘;’ [-Wpedantic]
 };
  ^
main.cpp:64:14: warning: unused parameter ‘nArgs’ [-Wunused-parameter]
 int main(int nArgs, char *args[]) {
              ^
main.cpp:64:32: warning: unused parameter ‘args’ [-Wunused-parameter]
 int main(int nArgs, char *args[]) {
                                ^
